--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </script>
   <link rel="stylesheet" href="assets/css/style.css">
 
-  <title>EXPONENT | Home</title>
+  <title>RATATOSKR | Home</title>
 
   <link rel="icon" type="image/png" href="images/logo.png" />
 
@@ -64,11 +64,11 @@
           <li class="cd-side__item cd-side__item--has-children cd-side__item--notifications cd-side__item--selected js-cd-item--has-children">
             <a href="#0">Available Service</a>
             <ul class="cd-side__sub-list">
-              <li class="cd-side__sub-item"><a href="https://exponentpilots.github.io/trials"><i class="fa-solid fa-clock"></i>&nbsp;&nbsp;&nbsp;Trials</a></li>
-              <li class="cd-side__sub-item"><a href="https://exponentpilots.github.io/races"><i class="fa-solid fa-person"></i>&nbsp;&nbsp;&nbsp;Races</a></li>
-              <li class="cd-side__sub-item"><a href="https://exponentpilots.github.io/weapons"><i class="fa-solid fa-shield-halved"></i>&nbsp;&nbsp;Weapons</a></li>
-              <li class="cd-side__sub-item"><a href="https://exponentpilots.github.io/fighting-styles"><i class="fa-solid fa-hand-fist"></i>&nbsp;&nbsp;Fighting Styles</a></li>
-              <li class="cd-side__sub-item"><a href="https://exponentpilots.github.io/materials"><i class="fa-solid fa-gem"></i>&nbsp;&nbsp;Materials</a></li>
+              <li class="cd-side__sub-item"><a href="https://ratatoskrpilots.github.io/trials"><i class="fa-solid fa-clock"></i>&nbsp;&nbsp;&nbsp;Trials</a></li>
+              <li class="cd-side__sub-item"><a href="https://ratatoskrpilots.github.io/races"><i class="fa-solid fa-person"></i>&nbsp;&nbsp;&nbsp;Races</a></li>
+              <li class="cd-side__sub-item"><a href="https://ratatoskrpilots.github.io/weapons"><i class="fa-solid fa-shield-halved"></i>&nbsp;&nbsp;Weapons</a></li>
+              <li class="cd-side__sub-item"><a href="https://ratatoskrpilots.github.io/fighting-styles"><i class="fa-solid fa-hand-fist"></i>&nbsp;&nbsp;Fighting Styles</a></li>
+              <li class="cd-side__sub-item"><a href="https://ratatoskrpilots.github.io/materials"><i class="fa-solid fa-gem"></i>&nbsp;&nbsp;Materials</a></li>
             </ul>
           </li>
 
@@ -80,7 +80,7 @@
 
           <!------ DISPLAY HOME PAGE ------>
 
-          <h1 style="text-align: center; font-weight: bold">EXPONENT PILOTING SERVICE</h1>
+          <h1 style="text-align: center; font-weight: bold">RATATOSKR PILOTING SERVICE</h1>
           <br>
           <hr>
           <strong>About</strong>
