--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </p>
           <hr>
             <div class="socials" style="display: flex;">
-              <p><a href="https://discord.gg/vEnm3uX23g" class="discord"><i class="fa-brands fa-discord"></i>&nbsp;Discord</a></p>
+              <p><a href="https://discord.gg/36PAfJMtxq" class="discord"><i class="fa-brands fa-discord"></i>&nbsp;Discord</a></p>
               
               <p><a href="https://www.facebook.com/profile.php?id=61571344408234" class="facebook"><i class="fa-brands fa-facebook"></i>&nbsp;Facebook</a></p>
             </div>
