--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </p>
           <hr>
             <div class="socials" style="display: flex;">
-              <p><a href="https://www.facebook.com/profile.php?id=61571344408234" class="facebook"><i class="fa-brands fa-facebook"></i>&nbsp;Facebook</a></p>
+              <p><a href="https://www.facebook.com/ratatoskrpilots" class="facebook"><i class="fa-brands fa-facebook"></i>&nbsp;Facebook</a></p>
             </div>
           </div>
         </div>
